2010-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs: Corrected method help
	  url.

2010-03-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomDecorator.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	  Fixed unit tests.

2010-03-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/ProjectFile.cs: Removed code
	  duplication.

2010-03-15  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs:
	* MonoDevelop.Projects.Dom/DomTypeParameterType.cs:
	* MonoDevelop.Projects.Dom/InstantiatedParameterType.cs:
	* MonoDevelop.Projects.Dom.Parser/TypeResolverVisitor.cs:
	  Worked on the DOM.

2010-03-15  Lars Magnusson <lavima@gmail.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs: 
	  Add method LoadProjectTypeGuids for reading typeGuid from 
	  project file and add fallbacks for LoadItem and 
	  FindHandlerForFile
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	  Add logic for checking the dotnet subtype extensions in 
	  GetValidFormatName.
	* MonoDevelop.Projects.Extensions/DotNetProjectNode.cs: Add
	  CanHandleFile override that checks the for dotnet support
	  if base call fails.
	* MonoDevelop.Projects.Extensions/DotNetProjectSubtypeNode.cs:
	  Add field and property for forced extension.
	  Add CanHandleFile that checks for matching typeGuid and 
	  extension.
	  
2010-03-15  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/WorkspaceItem.cs: Moved here the code
	  for loading user properties for the solution.

	* MonoDevelop.Projects/Project.cs:
	* MonoDevelop.Projects/SolutionItem.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs: Implemented