@@ -1,3 +1,9 @@
+2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
+	  Don't try to get guids from unknown files. Fixes bug #588760
+	  - Meaningless error message from mdtool.
+
 2010-03-16  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom/DomMethod.cs: Corrected method help
